# avail-rust

./: Cargo.toml  METADATA_NOTES.md  README.md  abba.txt  agents.md  build_api.sh  build_sdk.sh  changelog.md  install_dependencies.sh  justfile  rustfmt.toml
book/: .gitignore  (+3 more)
client/: Cargo.toml  README.md
client/examples/: account_00_query.rs  account_management.rs  blob_00_submit.rs  blob_api.rs  block_00_query.rs  block_01_events.rs  block_02_extrinsics.rs  block_encoded_extrinsics.rs  block_events.rs  block_extrinsics.rs  block_extrinsics_calls.rs  block_extrinsics_encoded.rs  block_extrinsics_events.rs  block_extrinsics_extrinsics.rs  block_extrinsics_rpc.rs  block_extrinsics_signed.rs  block_information.rs  blocks.rs  chain_00_query.rs  chain_account_info.rs  chain_block_author.rs  chain_block_event_count.rs  chain_block_hash.rs  chain_block_header.rs  chain_block_height.rs  chain_block_info.rs  chain_block_state.rs  chain_block_weight.rs  chain_chain_info.rs  chain_rpc_raw_call.rs  chain_runtime_api_raw_call.rs  custom_event.rs  legacy_block_events.rs  recipes_batch.rs  recipes_multisig.rs  recipes_proxy.rs  storage_double_map.rs  storage_map.rs  storage_value.rs  submission.rs  (+19 more)
client/src/: account.rs  blob.rs  block.rs  block_api.rs  client.rs  config.rs  constants.rs  conversions.rs  error.rs  error_ops.rs  extensions.rs  extrinsic.rs  lib.rs  macros.rs  platform.rs  retry_policy.rs  submission_api.rs  subscription.rs  transaction.rs  transaction_api.rs  transaction_options.rs  transactions.rs  utils.rs
client/src/block/: calls.rs  encoded.rs  events.rs  extrinsic.rs  extrinsic_options.rs  mod.rs  shared.rs  signed.rs
client/src/chain/: api.rs  best.rs  chain.rs  finalized.rs  head.rs  mod.rs
client/src/client/: block_client.rs  cache_client.rs  event_client.rs  mod.rs  online_client.rs  reqwest.rs  rpc.rs  storage_client.rs
client/src/clients/: block_client.rs  cache_client.rs  event_client.rs  main_client.rs  mock_client.rs  mod.rs  online_client.rs  reqwest_client.rs  rpc_api.rs  runtime_api.rs  storage_client.rs  test_runtime_metadata.txt  utils.rs
client/src/submission/: mod.rs  submittable.rs  submitted.rs
client/src/subscription/: block.rs  builder.rs  extrinsic.rs  fetcher.rs  justification.rs  mod.rs  sub.rs  subscription.rs
client/tests/: integration_tests.rs  mod.rs
client/tests/pallets/: balances.rs  da.rs  mod.rs  multisig.rs  nomination_pools.rs  proxy.rs  session.rs  staking.rs  timestamp.rs  utility.rs  vector.rs
client/tests/subs/: block.rs  block_with_just.rs  client_mock.rs  extrinsic.rs  grandpa_justification_json.rs  header.rs  mod.rs  raw_extrinsic.rs  transaction.rs
core/: Cargo.toml  README.md
core/src/: chain_types.rs  chain_types_generated.rs  config.rs  consensus.rs  decoded_events.rs  decoded_extrinsics.rs  decoded_storage.rs  decoded_transaction.rs  error.rs  extrinsic.rs  extrinsics_params.rs  from_substrate.rs  grandpa.rs  header.rs  header_next.rs  lib.rs  transaction.rs  utils.rs
core/src/rpc/: author.rs  blob.rs  block.rs  chain.rs  chainspec.rs  error.rs  grandpa.rs  kate.rs  mod.rs  rpc_methods.rs  runtime_api.rs  state.rs  substrate.rs  system.rs
core/src/runtime_api/: mod.rs
core/src/substrate/: extrinsic.rs  mod.rs  sp_core.rs  storage.rs
core/src/types/: metadata.rs  mod.rs  pallets.rs  substrate.rs
examples/: Cargo.toml  README.md  clean.sh  run.sh  rustfmt.toml
examples/account/: Cargo.toml
examples/account/src/: main.rs
examples/batch/: Cargo.toml
examples/batch/src/: main.rs
examples/blob/: Cargo.toml
examples/blob/src/: main.rs
examples/blob_api/: Cargo.toml
examples/blob_api/src/: main.rs
examples/block/: Cargo.toml
examples/block/src/: main.rs
examples/block_api/: Cargo.toml
examples/block_api/src/: main.rs
examples/block_client/: Cargo.toml
examples/block_client/src/: main.rs
examples/block_indexing/: Cargo.toml
examples/block_indexing/src/: main.rs
examples/book/: Cargo.toml
examples/chain_api/: Cargo.toml
examples/client/: Cargo.toml
examples/client_readme/: Cargo.toml
examples/code_doc/: client_doc.rs  sub_doc.rs
examples/constants/: Cargo.toml
examples/crates/: Cargo.toml
examples/custom_event/: Cargo.toml
examples/custom_ext_event_storage/: Cargo.toml
examples/custom_rpc_client/: Cargo.toml
examples/custom_storage/: Cargo.toml
examples/custom_transaction/: Cargo.toml
examples/decoding_encoding/: Cargo.toml
examples/encoding_decoding/: Cargo.toml
examples/estimating_fees/: Cargo.toml
examples/event_client/: Cargo.toml
examples/full_metadata/: Cargo.toml
examples/github/: Cargo.toml
examples/multisig/: Cargo.toml
examples/parallel_submission/: Cargo.toml
examples/parallel_transaction_submission/: Cargo.toml
examples/src/: account.rs  account_balance.rs  account_creation.rs  account_nonce.rs  batch.rs  block.rs  block_data_submission_all.rs  block_data_submission_by_app_id.rs  block_data_submission_by_hash.rs  block_data_submission_by_index.rs  block_data_submission_by_signer.rs  block_events.rs  block_indexing.rs  block_transaction_all.rs  block_transaction_all_static.rs  block_transaction_by_app_id.rs  block_transaction_by_app_id_static.rs  block_transaction_by_hash.rs  block_transaction_by_hash_static.rs  block_transaction_by_index.rs  block_transaction_by_index_static.rs  block_transaction_by_signer.rs  block_transaction_by_signer_static.rs  custom_rpc_connection.rs  data_submission.rs  data_with_commitments.rs  events.rs  http_rpc_connection.rs  indexer.rs  main.rs  multiproof.rs  parallel_transaction_submissions.rs  proxy.rs  rpc.rs  storage.rs  subxt_metadata.rs  transaction.rs  transaction_execute.rs  transaction_execute_and_watch.rs  transaction_execute_and_watch_finalization.rs  (+8 more)
examples/storage/: Cargo.toml
examples/storage_api/: Cargo.toml
examples/submission_api/: Cargo.toml
examples/subscriptions/: Cargo.toml
examples/subxt_storage/: Cargo.toml
examples/transaction_receipt/: Cargo.toml
examples/transaction_submission/: Cargo.toml
examples/transaction_submission_with_exp/: Cargo.toml
(+325 files in other folders)
