[workspace]

[package]
name = "avail-rust"
edition = "2021"
version = "0.1.11"
license = "ISC"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = { version = "1", default-features = false, features = ["from", "constructor"] }
tokio = { version = "1.42.0", default-features = false }
subxt = { version = "0.39.0", default-features = false, features = ["reconnecting-rpc-client", "jsonrpsee"] }
subxt-core = { version = "0.39.0", default-features = false  }
subxt-signer = { version = "0.39.0", default-features = false }
serde = { version = "1.0.195", features = ["derive", ] }
serde_json = { version = "1.0.124", features = ["raw_value"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
	"full",
	"bit-vec",
] }
scale-info = { version = "2.5.0", features = ["bit-vec"] }
hex = { version = "0.4" }
base58 = { version = "0.2.0" }
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12", default-features = false, features = ["serde"] }
bounded-collections = { version = "0.2.0", features = ["serde"] }
primitive-types = { version = "0.13.1", default-features = false }
log = { version = "0.4.22", default-features = false }
env_logger = { version = "0.11.5" }

jsonrpsee = { version = "0.24.7",  default-features = false, features = [ "http-client" ], optional = true }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12", default-features = false, features = [ "disable_panic_handler" ], optional = true }
hyper = { version = "1.6.0", default-features = false, features = ["http1", "client"] }
hyper-util = { version = "0.1.0", default-features = false }
http-body-util = { version = "0.1.3", default-features = false  }

avail-core = {  git = "https://github.com/availproject/avail-core", default-features = false, rev="626f02d1bddbc5f496e95dcc58940742068d0621", features = ["serde"] }
kate = {  git = "https://github.com/availproject/avail-core", default-features = false, rev="626f02d1bddbc5f496e95dcc58940742068d0621", features=["serde"]}
kate-recovery = {  git = "https://github.com/availproject/avail-core", default-features = false,  rev="626f02d1bddbc5f496e95dcc58940742068d0621", features=["serde"] }

[features]
default = [ "native" ]
native = [
	"derive_more/std",
	"subxt/default",
	"subxt-core/std",
	"sp-core/std",
	"subxt-signer/default",
	"kate-recovery/default",
	"dep:jsonrpsee"
]
wasm = [
	"subxt/web",
	"subxt-signer/web",
	"subxt-signer/sr25519",
	"subxt-signer/subxt",
	"dep:sp-io"
]

[patch.crates-io]
sp-core = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12" }
sp-io = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12" }
sp-runtime = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12" }
sp-std = { git = "https://github.com/availproject/polkadot-sdk.git", tag = "polkadot-1.7.1-patch-12" }
