[workspace]
members = [
	"core",
	"client",
]
exclude = [
	"examples/crates",
	"examples/github",
	"examples/submission_api",
	"examples/block_api",
	"examples/storage_api",
	"examples/chain_api",
	"examples/parallel_submission",
	"examples/multisig",
	"examples/batch",
	"examples/estimating_fees",
	"examples/custom_ext_event_storage",
	"examples/subscriptions",
	"ffi"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.4.0-rc.4"
license = "ISC"
repository = "https://github.com/availproject/avail-rust"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt"] }
serde = { version = "1.0", default-features = false, features = ["derive" ] }
serde_json = { version = "1.0", default-features = false, features = ["raw_value"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
impl-serde = { version = "0.5", default-features = false }
const-hex = { version = "1.16", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.13", default-features = false }
futures = { version = "0.3", default-features = false }

# Logs
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Scale
scale-info = { version = "2.11", default-features = false, features = ["bit-vec"] }
scale-decode = { version = "0.16", default-features = false }
scale-encode = { version = "0.10", default-features = false }

frame-metadata = {  version = "20.0", default-features = false }
sp-crypto-hashing = { version = "0.1", default-features = false }

# Subxt
subxt-core = { version = "0.41", default-features = false }
subxt-signer = { version = "0.41", default-features = false, features = ["sr25519", "subxt"] }
subxt-rpcs = { version = "0.41", default-features = false }
thiserror = { version = "2.0", default-features = false }
base64 = { version = "0.22.1" }


# Enabled with reqwest
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }

# Enabled with Wasm
wasm-bindgen-futures = { version =  "0.4" }
wasmtimer = { version = "0.4" }
