[package]
name = "avail-rust-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Avail Rust SDK client library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
impl-serde = { workspace = true }
const-hex = { workspace = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
frame-metadata = { workspace = true }
futures = { workspace = true }
codec = { workspace = true  }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"], optional = true  }

# Scale
scale-info = { workspace = true }
thiserror = { workspace = true }

# Enabled with Wasm
wasm-bindgen-futures = { workspace = true, optional = true  }
wasmtimer = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
async-channel = { workspace = true, optional = true }

## Enabled With Tokio
tokio = { workspace = true, optional = true }
smol = { workspace = true, optional = true }

## Enabled With Smol

avail-rust-core = { path = "./../core", version = "0.4.0-rc.2", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }

[features]
default = [ "native", "reqwest", "tracing", "tokio" ]
tracing = [
	"dep:tracing",
	"tracing-subscriber"
]
reqwest = [
	"dep:reqwest",
	"async-channel",
]
native = [
	"avail-rust-core/native"
]
wasm = [
	"avail-rust-core/wasm",
	"wasmtimer",
	"wasm-bindgen-futures",
	"async-channel",
]

tokio = [
	"dep:tokio"
]
smol = [
	"dep:smol",
	"async-channel",
]
