[package]
name = "avail-rust-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Avail Rust SDK client library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
impl-serde = { workspace = true }
const-hex = { workspace = true, default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frame-metadata = { workspace = true }
futures = { workspace = true }
codec = { workspace = true  }

# Logging
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json"], optional = true  }

# Scale
scale-info = { workspace = true }
thiserror = { workspace = true }

# Enabled with Wasm
wasm-bindgen-futures = { workspace = true, optional = true  }
wasmtimer = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

avail-rust-core = { path = "./../core", version = "0.5.0", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", default-features = false }

[features]
default = [ "native", "reqwest", "tracing" ]
tracing = [
	"dep:tracing",
	"tracing-subscriber"
]
reqwest = [
	"dep:reqwest"
]
native = [
	"avail-rust-core/native"
]
wasm = [
	"avail-rust-core/wasm",
	"wasmtimer",
	"wasm-bindgen-futures",
]
next = [
	"avail-rust-core/next",
]
mocks = []
