[workspace]

[package]
name = "block-client-example"
edition = "2024"

[dependencies]
avail-rust-client = { path = "./../../client", default-features = false, features = ["native", "reqwest", "tracing"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
const-hex = { version = "1.14.1", default-features = false, features = ["alloc"] }
