[workspace]

[package]
name = "custom-rpc-client--example"
edition = "2024"

[dependencies]
avail-rust-client = { path = "./../../client", default-features = false, features = ["native", "reqwest", "tracing"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
hex = { version = "0.4.3"}
serde = { version = "1.0.195", default-features = false, features = ["derive" ] }
serde_json = { version = "1.0.124", default-features = false, features = ["raw_value"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "default-tls"] }
