[workspace]

[package]
name = "custom-storage-example"
edition = "2024"

[dependencies]
avail-rust-client = { path = "./../../client", default-features = false, features = ["native", "reqwest"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
hex = { version = "0.4.3"}
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "bit-vec"] }
