[workspace]

[package]
name = "custom-transaction-example"
edition = "2024"

[dependencies]
avail-rust-client = { path = "./../../client", default-features = false, features = ["native", "reqwest"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
const-hex = { version = "1.14.1", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "bit-vec"] }
