[workspace]

[package]
name = "full-metadata-example"
edition = "2024"
default-run = "full-metadata-example"


[dependencies]
avail-rust-client = { path = "./../../client", default-features = false, features = ["native", "reqwest", "generated_metadata", "tracing" ] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
