[workspace]

[package]
name = "transaction-submission-with-explanations-example"
edition = "2021"

[dependencies]
avail-rust-client = { path = "./../../client", default-features = false, features = ["native", "reqwest", "tracing"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }